--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,12 @@
   scroll-behavior: smooth;
 }
 
+
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 @layer components {
   .max-container {
     max-width: 1440px;
